force-app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>

    <!--compactLayoutAssignment>SYSTEM</compactLayoutAssignment-->
    <!--externalSharingModel>Private</externalSharingModel-->
    <!--recordTypeTrackHistory>true</recordTypeTrackHistory-->
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>