force-app/main/default/objects/Case/fields/CommunityName__c.field-meta.xml
<CustomField>
    <fullName>CommunityName__c</fullName>
    <label>CommunityName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>