force-app/main/default/objects/Case/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code_ISO_2</valueSetName>
    </valueSet>
</CustomField>