force-app/main/default/objects/Case/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Code</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>