force-app/main/default/objects/Case/fields/Study_Code__c.field-meta.xml
<CustomField>
    <fullName>Study_Code__c</fullName>
    <label>Study Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>